[added] Web Fabrica de Tramites (and logo v0)

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<!--<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<li><a href="factory.html">Factory</a></li>
+								<!--<li><a href="elements.html">Elements</a></li>
 								<li><a href="#">Log In</a></li>
 								<li><a href="#">Sign Up</a></li> -->
 							</ul>
@@ -46,7 +46,7 @@
 					<section id="banner">
 						<div class="inner">
 							<!--<div class="logo"><span class="icon fa-diamond"></span></div>-->
-							<!--<img src="images/logo-transparent.png" alt="Our logo">-->
+							<img src="images/logo-transparent.png" alt="Our logo">
 							<h2>This is the Codeaholics Team</h2>
 							<p>ECOS 2016</p>
 						</div>
@@ -62,7 +62,7 @@
 									<div class="content">
 										<h2 class="major">Fábrica de Trámites</h2>
 										<p>La Fábrica de Trámites es una aplicación que permite la creación de múltiples alcaldías,  secretarias, funcionarios y trámites para facilitar a los ciudadanos la gestión de sus obligaciones con el Municipio a través de internet. En este sentido, la arquitectura de Software como Servicio SaaS que adopta esta aplicación, permitirá ofrecer un sistema altamente configurable y de fácil mantenimiento.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="factory.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
