[improvements] minor improvements: added team members plus few cosmetics

--- a/factory.html
+++ b/factory.html
@@ -52,7 +52,11 @@
 								<div class="inner">
 									<h3 class="major">Descripción</h3>
 									<p>La Fábrica de Trámites es una aplicación que permite la creación de múltiples alcaldías,  secretarias, funcionarios y trámites para facilitar a los ciudadanos la gestión de sus obligaciones con el Municipio a través de internet. En este sentido, la arquitectura de Software como Servicio SaaS que adopta esta aplicación, permitirá ofrecer un sistema altamente configurable y de fácil mantenimiento.</p>
-									<h4>Herramientas de desarrollo</h4>
+									<h4>Contexto</h4>
+									<div class="doc-vistas">
+										<img src="images/factory/contexto.png" width="50%" class="img-responsive" alt="">
+								  </div>
+									<h3 class="major">Herramientas de desarrollo</h3>
 									<ul class="icons">
 										<li>Github <a href="https://github.com/ecos-codeaholics" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 										<li><a href="http://codeaholics.dynns.com/do/view/Main/FabricaTramites" target="_blank"><span class="label">Twiki</span></a></li>
