--- a/index.html
+++ b/index.html
@@ -47,8 +47,90 @@
 						<div class="inner">
 							<!--<div class="logo"><span class="icon fa-diamond"></span></div>-->
 							<img src="images/logo-transparent.png" alt="Our logo">
-							<h2>This is the Codeaholics Team</h2>
+							<h2>Our amazing Codeaholics Team</h2>
 							<p>ECOS 2016</p>
+
+							<h3>Members</h3>
+
+							<div class="row">
+	                <div class="col-sm-4">
+	                    <div class="team-member">
+	                        <img src="images/team/1.png" width="50%" class="img-responsive img-circle" alt="">
+	                        <h4>David Martinez</h4>
+	                        <p class="text-muted">Storm 1</p>
+	                        <!--<ul class="list-inline social-buttons">
+	                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+	                            </li>
+	                        </ul> -->
+	                    </div>
+	                </div>
+									<div class="col-sm-4">
+	                    <div class="team-member">
+	                        <img src="images/team/1.png" width="50%" class="img-responsive img-circle" alt="">
+	                        <h4>Fabian Hernandez</h4>
+	                        <p class="text-muted">Storm 2</p>
+	                        <!--<ul class="list-inline social-buttons">
+	                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+	                            </li>
+	                        </ul> -->
+	                    </div>
+	                </div>
+									<div class="col-sm-4">
+	                    <div class="team-member">
+	                        <img src="images/team/1.png" width="50%" class="img-responsive img-circle" alt="">
+	                        <h4>Jheison Rodriguez</h4>
+	                        <p class="text-muted">Storm 3</p>
+	                        <!--<ul class="list-inline social-buttons">
+	                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+	                            </li>
+	                        </ul> -->
+	                    </div>
+	                </div>
+									<div class="col-sm-4">
+	                    <div class="team-member">
+	                        <img src="images/team/1.png" width="50%" class="img-responsive img-circle" alt="">
+	                        <h4>Sebastian Cardona</h4>
+	                        <p class="text-muted">Storm 4</p>
+	                        <!--<ul class="list-inline social-buttons">
+	                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+	                            </li>
+	                        </ul> -->
+	                    </div>
+	                </div>
+									<div class="col-sm-4">
+	                    <div class="team-member">
+	                        <img src="images/team/1.png" width="50%" class="img-responsive img-circle" alt="">
+	                        <h4>Andres Osorio</h4>
+	                        <p class="text-muted">Storm 5</p>
+	                        <!--<ul class="list-inline social-buttons">
+	                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+	                            </li>
+	                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+	                            </li>
+	                        </ul>-->
+	                    </div>
+	                </div>
+								</div>
+
+							<h2>Projects</h2>
 						</div>
 					</section>
 
@@ -73,6 +155,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>We are here to help you. Please contact us.</p>
+							<!--
 							<form method="post" action="#">
 								<div class="field">
 									<label for="name">Name</label>
@@ -90,6 +173,7 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
+						-->
 							<ul class="contact">
 								<li class="fa-home">
 									Codeaholics SAS<br />
