[addded] link to Twiki from the Top menu

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
+								<li><a href="http://codeaholics.dynns.com/do/view/Main/WebHome">TWiki</a></li>
 								<li><a href="factory.html">Factory</a></li>
 								<!--<li><a href="elements.html">Elements</a></li>
 								<li><a href="#">Log In</a></li>
@@ -46,7 +47,7 @@
 					<section id="banner">
 						<div class="inner">
 							<!--<div class="logo"><span class="icon fa-diamond"></span></div>-->
-							<img src="images/logo-transparent.png" alt="Our logo">
+							<img src="images/logo-transparent-V2.png" alt="Our logo">
 							<h2>Our amazing Codeaholics Team</h2>
 							<p>ECOS 2016</p>
 
