[FDTVideo] Added video to FDT project page

--- a/factory.html
+++ b/factory.html
@@ -50,6 +50,10 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
+								<h3 class="major">Nuestro prototipo</h3>
+									<iframe width="640" height="360" 
+									src="https://www.youtube.com/embed/-vIu39OWO-c" frameborder="0" allowfullscreen>
+									</iframe> 
 									<h3 class="major">Descripción</h3>
 									<p>La Fábrica de Trámites es una aplicación que permite la creación de múltiples alcaldías,  secretarias, funcionarios y trámites para facilitar a los ciudadanos la gestión de sus obligaciones con el Municipio a través de internet. En este sentido, la arquitectura de Software como Servicio SaaS que adopta esta aplicación, permitirá ofrecer un sistema altamente configurable y de fácil mantenimiento.</p>
 									<h4>Contexto</h4>
