[Description] Adding a description
- Home page description added (screenshot)

--- a/factory.html
+++ b/factory.html
@@ -50,16 +50,20 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
-								<h3 class="major">Nuestro prototipo</h3>
+									<h3 class="major">Presentación</h3>
 									<iframe width="640" height="360" 
 									src="https://www.youtube.com/embed/-vIu39OWO-c" frameborder="0" allowfullscreen>
-									</iframe> 
-									<h3 class="major">Descripción</h3>
+									</iframe>
+									<h3 class="major">Nuestro prototipo</h3>
+									<div class="doc-vistas">
+										<img src="images/factory/producto-FDT.png" width="50%" class="img-responsive" alt="">
+								  	</div>
+									<h3 class="major">Contexto</h3>
 									<p>La Fábrica de Trámites es una aplicación que permite la creación de múltiples alcaldías,  secretarias, funcionarios y trámites para facilitar a los ciudadanos la gestión de sus obligaciones con el Municipio a través de internet. En este sentido, la arquitectura de Software como Servicio SaaS que adopta esta aplicación, permitirá ofrecer un sistema altamente configurable y de fácil mantenimiento.</p>
 									<h4>Contexto</h4>
 									<div class="doc-vistas">
 										<img src="images/factory/contexto.png" width="50%" class="img-responsive" alt="">
-								  </div>
+								  	</div>
 									<h3 class="major">Herramientas de desarrollo</h3>
 									<ul class="icons">
 										<li>Github <a href="https://github.com/ecos-codeaholics" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
