[FDT] FDT Home image expands

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 						-->
 							<ul class="contact">
 								<li class="fa-home">
-									Codeaholics SAS<br />
+									Codeaholics<br />
 									Bogota DC<br />
 									Colombia, 111111
 								</li>
@@ -188,7 +188,7 @@
 								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li> -->
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Codeaholics SAS. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Codeaholics. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
